--- a/package.json
+++ b/package.json
@@ -1,34 +1,47 @@
 {
-  "name": "sheets-clearjs",
+  "name": "excel-course",
   "version": "1.0.0",
-  "description": "sheets on pure js",
+  "description": "Pure JavaScript Excel Application",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack",
-    "build": "webpack --mode production"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open",
+    "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/devstew/sheetsNotShits.git"
+    "url": "git+https://github.com/vladilenm/excel-course.git"
   },
   "keywords": [
     "js",
     "javascript",
-    "sheets"
+    "excel"
   ],
   "author": "Steven Purzhash <devolper7@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/devstew/sheetsNotShits/issues"
+    "url": "https://github.com/vladilenm/excel-course/issues"
   },
-  "homepage": "https://github.com/devstew/sheetsNotShits#readme",
+  "homepage": "https://github.com/vladilenm/excel-course#readme",
+  "private": true,
+  "browserslist": "> 0.25%, not dead",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.1",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.1",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0"
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.0",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
